# faxcloud-analyzer

./: .dockerignore  .env.example  .env.prod  .gitignore  ARCHITECTURE_V2.md  BACKEND_TECHNICAL_GUIDE.md  BUILD_IOS_NO_MAC.md  CHANGELOG.md  CHECKLIST.md  CLEANUP_SUMMARY.md  CONDITIONS_ANALYSE.md  DEPLOYMENT_SUMMARY.md  Dockerfile  FEATURES_V3.md  FILE_INDEX.md  GUIDE_OPTIMISATION.md  IMPLEMENTATION_STATUS.md  INDEX.md  MYSQL_SETUP.md  NGROK_HEADER.md  NGROK_INFO.md  OPTIMIZATIONS.md  PATCH_V3_SUMMARY.md  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  PROJECT_TREE.txt  QRCODE_PDF.md  QUICKSTART.md  QUICK_START.md  README.md  README_CLEAN.md  README_PRO.md  RESUME_FIXES.md  REVIEW_COMPLETE.md  SETUP_COMPLETE.md  SPEED_OPTIMIZATIONS.md  START-SERVER.ps1  START_HERE.txt  STATUS.txt  (+43 more)
app/: __init__.py  main.py  routes.py
asterisk/: extensions.conf  manager.conf  modules.conf  pjsip.conf
backend/: server.py  wsgi.py
config/: columns.yaml  settings.py
core/: __init__.py  analyzer.py  asterisk.py  config.py  db.py  importer.py  pdf.py  reporter.py
database/: faxcloud.db-journal
deploy/: faxcloud-analyzer.service  nginx.conf
docs/: API_GUIDE.md  ARCHITECTURE.md  Consommation_CHU NICE_20251104_104525.csv  DEPLOYMENT.md  DEVELOPMENT.md  DOCUMENTATION.md  PSEUDOCODE.md  README.md  SYNTHESE.md
exports/: Consommation_CHU NICE_20251104_104525.csv
frontend/: nginx.conf
ios/: API_REFERENCE.md  ARCHITECTURE.md  BEST_PRACTICES.md  DOCUMENTATION_INDEX.md  ExportOptions.plist  GITHUB_ACTIONS_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  (+9 more)
(+125 files in other folders)
