[tool.poetry]
name = "faxcloud-analyzer"
version = "0.1.0"
description = "Plateforme locale d'analyse d'exports FaxCloud"
authors = ["FaxCloud Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlmodel = "^0.0.22"
sqlalchemy = "^2.0.35"
alembic = "^1.13.2"
pydantic-settings = "^2.4.0"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
python-multipart = "^0.0.9"
jinja2 = "^3.1.4"
qrcode = "^7.4.2"
watchdog = "^4.0.1"
python-slugify = "^8.0.4"
python-dateutil = "^2.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
ruff = "^0.6.9"
black = "^24.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "W"]
ignore = ["E501"]
